--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 node_modules/
+src/main/resources/static/js/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
