--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -16,7 +16,9 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "uglify-js": "^3.13.10",
-    "glob": "^7.1.7"
+    "glob": "^7.1.7",
+    "node-fetch": "^3.0.0",
+    "jest-fetch-mock": "^3.0.3"
   },
   "babel": {
     "presets": [
