--- a/src/main/resources/config/server.properties
+++ b/src/main/resources/config/server.properties
@@ -1,2 +1,6 @@
-server.port=8081
-server.host=0.0.0.0
+server.port=8444
+server.host=127.0.0.1
+ssl.keystore.path=keystore.jks
+ssl.keystore.password=<keystore_password>
+ssl.privatekey.password=<privatekey_password>
+ssl.key.alias=<alias>
