feat: Added TCP server functionality for time management

--- a/src/main/resources/config/server.properties
+++ b/src/main/resources/config/server.properties
@@ -1,5 +1,6 @@
 server.port=8444
 server.host=127.0.0.1
+serverTCP.port=9090
 ssl.keystore.path=keystore.jks
 ssl.keystore.password=<keystore_password>
 ssl.privatekey.password=<privatekey_password>
