Added README.md Translation and Headers for Scripts and Tests

--- a/src/main/resources/config/server.properties
+++ b/src/main/resources/config/server.properties
@@ -2,6 +2,6 @@ server.port=8444
 server.host=127.0.0.1
 serverTCP.port=9090
 ssl.keystore.path=keystore.jks
-ssl.keystore.password=<keystore_password>
-ssl.privatekey.password=<privatekey_password>
-ssl.key.alias=<alias>
+ssl.keystore.password=4rlfVJCj9nAx+b//dWfRDMYGg47egy2ZEZeq4m7fd2g=
+ssl.privatekey.password=4rlfVJCj9nAx+b//dWfRDMYGg47egy2ZEZeq4m7fd2g=
+ssl.key.alias=Wxk5tYI30oWx
