--- a/src/main/resources/config/server.properties
+++ b/src/main/resources/config/server.properties
@@ -1,7 +1,7 @@
-server.port=8444
-server.host=127.0.0.1
+server.port=8449
+server.host=172.17.0.1
 serverTCP.port=9090
 ssl.keystore.path=keystore.jks
-ssl.keystore.password=c+RhTWEYyRQYWpONu42J0C/ygkn4do+HsBR5qwkHfI8=
-ssl.privatekey.password=c+RhTWEYyRQYWpONu42J0C/ygkn4do+HsBR5qwkHfI8=
-ssl.key.alias=gQ5Q83LIXNby
+ssl.keystore.password=c3EMZsyGido5aVMD+h2pZliSRbG2vkK41fm3iIqse/E=
+ssl.privatekey.password=c3EMZsyGido5aVMD+h2pZliSRbG2vkK41fm3iIqse/E=
+ssl.key.alias=tHTOfe1KrPxp
