Removal of Unnecessary Privileges

--- a/src/main/resources/config/server.properties
+++ b/src/main/resources/config/server.properties
@@ -2,6 +2,6 @@ server.port=8449
 server.host=172.17.0.1
 serverTCP.port=9090
 ssl.keystore.path=keystore.jks
-ssl.keystore.password=c3EMZsyGido5aVMD+h2pZliSRbG2vkK41fm3iIqse/E=
-ssl.privatekey.password=c3EMZsyGido5aVMD+h2pZliSRbG2vkK41fm3iIqse/E=
-ssl.key.alias=tHTOfe1KrPxp
+ssl.keystore.password=3f3mkwWs2u1ZPkgMaDbYh4rnJ+NepH5lJIGZSUInTWw=
+ssl.privatekey.password=3f3mkwWs2u1ZPkgMaDbYh4rnJ+NepH5lJIGZSUInTWw=
+ssl.key.alias=HoJ6ia98a7Fu
